[package]
name = "url_cert"
version = "0.1.0"
authors = ["Jim <shoot13008@gmail.com>"]
edition = "2021"
description = "get server cert from domain"
repository = ""
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.18.0"
webpki-roots = "0.20.0"
webpki = "0.21.3"
x509-parser = "0.8.0-beta4"
chrono = { version = "0.4.13", features = [ 'serde' ] }
serde = { version = "1.0.114", features = [ 'derive' ] }
base64 = "0.22.0"
url = "2.5.0"
